<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.diboard</groupId>
	<artifactId>dibd</artifactId>
	<packaging>jar</packaging>
	<version>1.0.8-SNAPSHOT</version>
	<name>dibd NNTP implementation for distributed ImageBoard</name>

	<dependencies>
		<!-- <dependency> <groupId>commons-codec</groupId> <artifactId>commons-codec</artifactId> 
			<version>1.10</version> </dependency> -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.0-rc1</version>
		</dependency>
		<!-- <dependency> <groupId>org.apache.httpcomponents</groupId> <artifactId>httpclient</artifactId> 
			<version>4.5.1</version> </dependency> -->
		<!-- CouchDB <dependency> <groupId>org.json</groupId> <artifactId>json</artifactId> 
			<version>20160212</version> </dependency> -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.0.0</version>
			<scope>runtime</scope>
		</dependency>
		<!--<dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
			<version>6.0.2</version> </dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.7.22</version>
			<scope>test</scope>
		</dependency>

		<!-- thumbnail ImageMagic interface -->
		<dependency>
			<groupId>org.im4java</groupId>
			<artifactId>im4java</artifactId>
			<version>1.4.0</version>
		</dependency>

		<!-- mime <dependency> <groupId>org.apache.james</groupId> <artifactId>apache-mime4j-core</artifactId> 
			<version>0.8.0</version> </dependency> -->

	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>



		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!--<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
				<version>2.4</version> <configuration> <archive> <manifest> <addClasspath>true</addClasspath> 
				<mainClass>org.sonews.Main</mainClass> </manifest> </archive> </configuration> 
				</plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>dibd.App</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>create-my-bundle</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>none</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
				<executions> <execution> <id>copy-dependencies</id> <phase>prepare-package</phase> 
				<goals> <goal>copy-dependencies</goal> </goals> <configuration> <outputDirectory>${project.build.directory}/classes/lib</outputDirectory> 
				<overWriteReleases>false</overWriteReleases> <overWriteSnapshots>false</overWriteSnapshots> 
				<overWriteIfNewer>true</overWriteIfNewer> </configuration> </execution> </executions> 
				</plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
				<configuration> <archive> <manifest> <addClasspath>true</addClasspath> <classpathPrefix>lib</classpathPrefix> 
				<mainClass>test.org.Cliente</mainClass> </manifest> <manifestEntries> <Class-Path>lib/</Class-Path> 
				</manifestEntries> </archive> </configuration> </plugin> -->

		</plugins>
		<resources>
			<resource>
				<directory>util</directory>
				<includes>
					<!-- <include>commands.list</include> -->
					<include>usage</include>
				</includes>
			</resource>
		</resources>
	</build>
</project>
